--- a/process_reaction_database/model_training.ipynb
+++ b/process_reaction_database/model_training.ipynb
@@ -17,12 +17,13 @@
    ],
    "source": [
     "import pickle\n",
-    "import pandas as pd\n",
+    "import pandas as pd # pandas==1.4.2\n",
     "import torch\n",
     "import numpy as np\n",
     "import torch.nn as nn\n",
     "import torch.utils.data as Data\n",
     "from tqdm import tqdm\n",
+    "from rdkit import Chem\n",
     "\n",
     "print('\\n'.join(f'{m.__name__}=={m.__version__}' for m in globals().values() if getattr(m, '__version__', None)))"
    ]
@@ -102,6 +103,62 @@
     "    with open(\"./data/allmol_smi_df.pkl\",\"wb\") as f:\n",
     "        pickle.dump(allmol_smi_df, f)\n",
     "    print('Processing allmol_smi_df dataframe... Done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mol_1: CC[C@H](C)Cn1c(=O)n(C)c(=O)c2[nH]c(C)nc21 is NOT in the training dataset\n",
+      "mol_5: Cn1c(=O)[nH]c(N)c(N)c1=O is NOT in the training dataset\n",
+      "mol_7: CC[C@H](C)Cn1c(N)c(N)c(=O)n(C)c1=O is NOT in the training dataset\n",
+      "mol_2: CC(=O)/C=C/C1=C(C)C[C@H](O)CC1(C)C is NOT in the training dataset\n",
+      "mol_9: \u001b[91m CC(=O)/C=C/C1=C(C)CCCC1(C)C is in the training dataset\u001b[00m\n",
+      "mol_3: CCOC(C(=O)OCCN(C)C)(c1ccccc1)c1ccccc1 is NOT in the training dataset\n",
+      "mol_12: CCOC(C(=O)O)(c1ccccc1)c1ccccc1 is NOT in the training dataset\n",
+      "mol_14: CC[C@@H](CO)NCCN[C@@H](CC)CO is NOT in the training dataset\n",
+      "mol_26: C=C(C)[C@@H]1CCC(C)=C[C@H]1c1c(O)cc(CCCCC)cc1O is NOT in the training dataset\n",
+      "mol_44: CCN(C)C(=O)Oc1cccc([C@@H](C)O)c1 is NOT in the training dataset\n",
+      "mol_46: O=[N+]([O-])c1cccc([C@@H]2CO2)c1 is NOT in the training dataset\n",
+      "mol_48: COc1ccc(C[C@@H](C)N)cc1 is NOT in the training dataset\n",
+      "mol_49: C[C@@H](N)Cc1ccccc1 is NOT in the training dataset\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if a molecule is in the training dataset\n",
+    "def check_in_train(smi):\n",
+    "    def prRed(skk): print(\"\\033[91m {}\\033[00m\" .format(skk))\n",
+    "    std_smi = Chem.MolToSmiles(Chem.MolFromSmiles(smi))\n",
+    "    train_smiles_list = allmol_smi_df.loc[allmol_smi_df['split']=='train']['smiles']\n",
+    "    if std_smi in train_smiles_list.tolist():\n",
+    "        prRed(f'{std_smi} is in the training dataset')\n",
+    "    else:\n",
+    "        print(f'{std_smi} is NOT in the training dataset')\n",
+    "    return None\n",
+    "\n",
+    "smiles_dict = {'mol_1':'C[C@H](CN1C(N(C(C2=C1N=C(C)N2)=O)C)=O)CC',\n",
+    "               'mol_5':'O=C(C(N)=C(N1)N)N(C)C1=O',\n",
+    "               'mol_7':'CC[C@@H](CN1C(N)=C(C(N(C1=O)C)=O)N)C',\n",
+    "               'mol_2':'CC(/C=C/C1=C(C[C@@H](CC1(C)C)O)C)=O',\n",
+    "               'mol_9':'CC(/C=C/C1=C(CCCC1(C)C)C)=O',\n",
+    "               'mol_3':'CCOC(C1=CC=CC=C1)(C2=CC=CC=C2)C(OCCN(C)C)=O',\n",
+    "               'mol_12':'CCOC(C1=CC=CC=C1)(C2=CC=CC=C2)C(O)=O',\n",
+    "               'mol_14':'CC[C@H](NCCN[C@H](CO)CC)CO',\n",
+    "               'mol_26':'C=C([C@@H]1CCC(C)=C[C@H]1C2=C(O)C=C(CCCCC)C=C2O)C',\n",
+    "               'mol_44':'CCN(C(OC1=CC=CC([C@@H](C)O)=C1)=O)C',\n",
+    "               'mol_46':'O=[N+](C1=CC=CC([C@H]2OC2)=C1)[O-]',\n",
+    "               'mol_48':'C[C@@H](N)CC1=CC=C(OC)C=C1',\n",
+    "               'mol_49':'C[C@@H](N)CC1=CC=CC=C1'\n",
+    "               }\n",
+    "for mol_name, mol_smi in smiles_dict.items():\n",
+    "    print(f'{mol_name}: ', end='')\n",
+    "    check_in_train(mol_smi)"
    ]
   },
   {
