update running time and other info

--- a/evaluate_score/process_zinc_one_step.ipynb
+++ b/evaluate_score/process_zinc_one_step.ipynb
@@ -2,44 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import scipy.stats"
+    "from scipy.stats import pearsonr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# List SFScores, backward confidence, and template score\n",
-    "top_list = [5]\n",
-    "for top in top_list:\n",
-    "    sfchem_list = []\n",
-    "    sfenzy_list = []\n",
-    "    sfdiff_list = []\n",
-    "    top_bw_confidence = []\n",
-    "    top_template_score = []\n",
-    "    for i in range(11003):\n",
-    "        path = f'../data/in_vitro_search_result/in_vitro_{i}.json'\n",
-    "        with open(path, \"r\") as outfile:\n",
-    "            result_dict = json.load(outfile)\n",
-    "        sfscore_chem=result_dict['sfscore'][0]\n",
-    "        sfscore_enzy=result_dict['sfscore'][1]\n",
-    "        sfscore_diff=result_dict['sfscore'][0]-result_dict['sfscore'][1]\n",
-    "        sfchem_list.append(sfscore_chem)\n",
-    "        sfenzy_list.append(sfscore_enzy)\n",
-    "        sfdiff_list.append(sfscore_diff)\n",
-    "        top_bw_confidence.append(sum(result_dict['chem_bw_confidence_list'][:top])/top)\n",
-    "        top_template_score.append(sum(result_dict['enzy_template_score_list'][:top])/top)\n",
-    "zinc_sfscore_retro_result = pd.DataFrame([sfchem_list,sfenzy_list,sfdiff_list,top_bw_confidence,top_template_score]).T\n",
-    "zinc_sfscore_retro_result.to_csv(f'../data/in-vitro/zinc_sfscore_retro_result.csv')\n"
+    "try:\n",
+    "    zinc_sfscore_retro_result = pd.read_csv('../data/in-vitro/zinc_sfscore_retro_result.csv',index_col=0)\n",
+    "except:\n",
+    "    top_list = [5]\n",
+    "    for top in top_list:\n",
+    "        sfchem_list = []\n",
+    "        sfenzy_list = []\n",
+    "        sfdiff_list = []\n",
+    "        top_bw_confidence = []\n",
+    "        top_template_score = []\n",
+    "        for i in range(11003):\n",
+    "            path = f'../data/in_vitro_search_result/in_vitro_{i}.json'\n",
+    "            with open(path, \"r\") as outfile:\n",
+    "                result_dict = json.load(outfile)\n",
+    "            sfscore_chem=result_dict['sfscore'][0]\n",
+    "            sfscore_enzy=result_dict['sfscore'][1]\n",
+    "            sfscore_diff=result_dict['sfscore'][0]-result_dict['sfscore'][1]\n",
+    "            sfchem_list.append(sfscore_chem)\n",
+    "            sfenzy_list.append(sfscore_enzy)\n",
+    "            sfdiff_list.append(sfscore_diff)\n",
+    "            top_bw_confidence.append(sum(result_dict['chem_bw_confidence_list'][:top])/top)\n",
+    "            top_template_score.append(sum(result_dict['enzy_template_score_list'][:top])/top)\n",
+    "    zinc_sfscore_retro_result = pd.DataFrame([sfchem_list,sfenzy_list,sfdiff_list,top_bw_confidence,top_template_score]).T\n",
+    "    zinc_sfscore_retro_result.to_csv('../data/in-vitro/zinc_sfscore_retro_result.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sfchem_list vs. top_bw_confidence pearsonr corr: 0.6068061419463089, p_value: 0.00000e+00\n",
+      "sfenzy_list vs. top_template_score pearsonr corr: 0.3559831551757154, p_value: 0.00000e+00\n",
+      "sfdiff_list vs. top_bw_confidence pearsonr corr: 0.6018628875611666, p_value: 0.00000e+00\n",
+      "sfdiff_list vs. top_template_score pearsonr corr: -0.35231115479521097, p_value: 5.52069e-319\n"
+     ]
+    }
+   ],
+   "source": [
+    "zinc_sfscore_retro_result.columns = ['sfchem_list','sfenzy_list','sfdiff_list','top_bw_confidence','top_template_score']\n",
+    "corr, p_value = pearsonr(zinc_sfscore_retro_result['sfchem_list'],zinc_sfscore_retro_result['top_bw_confidence'])\n",
+    "print(f'sfchem_list vs. top_bw_confidence pearsonr corr: {corr}, p_value: {p_value:.5e}')\n",
+    "corr, p_value = pearsonr(zinc_sfscore_retro_result['sfenzy_list'],zinc_sfscore_retro_result['top_template_score'])\n",
+    "print(f'sfenzy_list vs. top_template_score pearsonr corr: {corr}, p_value: {p_value:.5e}')\n",
+    "corr, p_value = pearsonr(zinc_sfscore_retro_result['sfdiff_list'],zinc_sfscore_retro_result['top_bw_confidence'])\n",
+    "print(f'sfdiff_list vs. top_bw_confidence pearsonr corr: {corr}, p_value: {p_value:.5e}')\n",
+    "corr, p_value = pearsonr(zinc_sfscore_retro_result['sfdiff_list'],zinc_sfscore_retro_result['top_template_score'])\n",
+    "print(f'sfdiff_list vs. top_template_score pearsonr corr: {corr}, p_value: {p_value:.5e}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpf('0.0')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from mpmath import mp\n",
+    "mp.dps = 100\n",
+    "mp_p_value = mp.mpf(p_value)\n",
+    "mp_p_value"
    ]
   },
   {
